quick fix for IE layout problem

--- a/app/facilities/SplashSelector.scss
+++ b/app/facilities/SplashSelector.scss
@@ -25,7 +25,7 @@
   width:100%;
   background: white;
   margin: 18px 0 0 0;
-  text-align: initial;
+  text-align: left;
   position: relative;
   height: auto;
 
